[package]
authors = ["Tim Fish <tim@timfish.uk>"]
edition = "2021"
name = "node-sadness-generator"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version = "2"}
napi-derive = "2"
sadness-generator = "0.5"

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto = true
